[OSD][VM][DEVICE][MEMORY][IO] Apply upstream 2022-12-04 to below devices.
[HD63484][I8080][I286_NP21][I386_NP21][i8237][Z80]

- [VM][DEVICE] Check USE_DEBUGGER define to __USE_DEBUGGER at
               DEVICE::initialize() .
- [VM][I8080] Abondon I8080_BASE:: , integrated to I8080:: .
              Integrated to libCSPcommon_vm, not need to compile for
			  using VMs.
- [VM][I8237] Abondon I8237_BASE:: , integrated to I8237:: .
              Integrated to libCSPcommon_vm, not need to compile for
			  using VMs.
- [OSD] Remove flags: I8080_MEMORY_WAIT and I8080_IO_WAIT
- [OSD] Add flag : HAS_I8080
- [COMMON_VM] Update SOVERSION.

--- a/source/src/vm/common_vm/CMakeLists.txt
+++ b/source/src/vm/common_vm/CMakeLists.txt
@@ -1,6 +1,6 @@
 message("* vm/common_vm")
 
-SET(THIS_LIB_VERSION 7.7.3)
+SET(THIS_LIB_VERSION 7.8.0)
 
 #include(cotire)
 set(s_vm_common_vm_srcs
@@ -25,10 +25,10 @@ set(s_vm_common_vm_srcs
 	../i286.cpp
 #	../i386.cpp
 	../i386_dasm.cpp
-	../i8080_base.cpp
+	../i8080.cpp
 
 	../i8155.cpp
-	../i8237_base.cpp
+	../i8237.cpp
 	../i8251.cpp
 	../i8253.cpp
 	../i8255.cpp
