[VM][MZ5500][PC98HA] Apply to upstream 2022-12-04 .

--- a/source/src/vm/pc98ha/CMakeLists.txt
+++ b/source/src/vm/pc98ha/CMakeLists.txt
@@ -2,17 +2,17 @@ cmake_minimum_required (VERSION 3.0)
 
 message("* vm/${EXE_NAME}")
 
-set(BASIC_VM_FILES_PC98HA 
+set(BASIC_VM_FILES_PC98HA
 
 	bios.cpp
 	calendar.cpp
 	floppy.cpp
 	keyboard.cpp
-	./memory.cpp
+	membus.cpp
 	note.cpp
 
 	pc98ha.cpp
 )
-	   
+
 
 add_library(vm_${EXE_NAME}  ${BASIC_VM_FILES_PC98HA})
