[VM]  Apply ALL VMs to upstream 2022-12-04 .

--- a/source/src/vm/yis/CMakeLists.txt
+++ b/source/src/vm/yis/CMakeLists.txt
@@ -5,13 +5,14 @@ message("* vm/emuyis")
 add_library(vm_emuyis
 	../m6502.cpp
 	../msm58321.cpp
-	
+
 	calendar.cpp
 	display.cpp
 	floppy.cpp
 	keyboard.cpp
 	mapper.cpp
+	membus.cpp
 	sound.cpp
-	
+
 	yis.cpp
 )
