--- a/source/src/vm/common_vm/CMakeLists.txt
+++ b/source/src/vm/common_vm/CMakeLists.txt
@@ -1,6 +1,6 @@
 message("* vm/common_vm")
 
-SET(THIS_LIB_VERSION 7.8.1)
+SET(THIS_LIB_VERSION 7.9.0)
 
 #include(cotire)
 set(s_vm_common_vm_srcs
@@ -97,7 +97,11 @@ set(s_vm_common_vm_srcs
 	../upd16434.cpp
 	../upd1990a.cpp
 	../upd4991a.cpp
+
 	../upd71071.cpp
+	../upd71071_art.cpp
+
+
 	../upd7220.cpp
 	../upd765a.cpp
 	../upd7752.cpp
