[VM][FMTOWNS][TOWNS_SCSI_HOST] .

--- a/source/src/vm/fmtowns/CMakeLists.txt
+++ b/source/src/vm/fmtowns/CMakeLists.txt
@@ -6,7 +6,7 @@ set(VM_FMTOWNS_DEV_SRCS
 #	ad7820kr.cpp
 #	rf5c68.cpp
 #	ym2612.cpp
-	
+
 	adpcm.cpp
 
 	floppy.cpp
@@ -14,26 +14,26 @@ set(VM_FMTOWNS_DEV_SRCS
 	scsi.cpp
 	timer.cpp
 	dmac.cpp
-	
+
 	fontroms.cpp
 	iccard.cpp
 	joystick.cpp
 	joypad_2btn.cpp
 	joypad_6btn.cpp
 	mouse.cpp
-	
+
 	msdosrom.cpp
 	serialrom.cpp
 	dictionary.cpp
-	
+
 	cdrom/cdrom.cpp
 	cdrom/cdrom_cue_parser.cpp
 	cdrom/cdrom_ccd_parser.cpp
 	cdrom/cdrom_iso_parser.cpp
-	
+
 	crtc.cpp
 	towns_memory.cpp
-	towns_scsi_host.cpp
+	#towns_scsi_host.cpp
 	sprite.cpp
 	sysrom.cpp
 	vram.cpp
@@ -42,7 +42,7 @@ set(VM_FMTOWNS_DEV_SRCS
 	../msm58321.cpp
 
 	./mb87078.cpp
-	
+
 	fmtowns.cpp
 )
 
@@ -53,4 +53,4 @@ endif()
 
 add_library(vm_${EXE_NAME}
 	${VM_FMTOWNS_DEV_SRCS}
-)	
+)
