[BUILD][CMake] Split machine configrations made by SORD.
- Split into config_sord.cmake from config_misccom.cmake .

--- a/source/CMakeLists.txt
+++ b/source/CMakeLists.txt
@@ -32,6 +32,7 @@ include(config_fmtowns)
 include(config_casio)
 include(config_msx)
 include(config_mz80_700)
+include(config_sord)
 include(config_pc6001)
 include(config_pc8801)
 include(config_pc9801)
