--- a/source/src/vm/x07/CMakeLists.txt
+++ b/source/src/vm/x07/CMakeLists.txt
@@ -1,7 +1,4 @@
-cmake_minimum_required (VERSION 3.0)
-
-message("* vm/emux07")
-
+message("* vm/${EXE_NAME}")
 add_library(vm_emux07
 	x07.cpp
 	io.cpp
