[VM][General] Temporally Merge Upstream 2023-01-22 .
- This still don't test to build.Will do.
- [ToDo][GUI][MENU] *Must* implement Serial and MIDI menu and
                     INTERFACE.
		     Now, serial menu has implemented temporally.

--- a/source/src/vm/pc98ha/CMakeLists.txt
+++ b/source/src/vm/pc98ha/CMakeLists.txt
@@ -2,12 +2,13 @@ message("* vm/${EXE_NAME}")
 
 set(BASIC_VM_FILES_PC98HA
 
-	bios.cpp
+	#bios.cpp
 	calendar.cpp
 	floppy.cpp
-	keyboard.cpp
+	../pc9801/keyboard.cpp
 	membus.cpp
 	note.cpp
+	../pc9801/serial.cpp
 
 	pc98ha.cpp
 )
